--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
+    "smoke:prod": "bash ./scripts/smoke-tests.sh",
     "test": "vitest run",
     "test:watch": "vitest"
   },
