--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,11 @@ VITE_SUPABASE_URL="https://YOUR_PROJECT_REF.supabase.co"
 VITE_SUPABASE_PUBLISHABLE_KEY="YOUR_SUPABASE_ANON_KEY"
 
 # Supabase Edge Functions (required in Supabase environment)
-OPENAI_API_KEY="YOUR_OPENAI_API_KEY"
+OPENROUTER_API_KEY="YOUR_OPENROUTER_API_KEY"
+OPENAI_API_KEY="YOUR_OPENAI_API_KEY" # fallback opcional
 
 # Optional
 VITE_SUPABASE_PROJECT_ID="YOUR_PROJECT_REF"
 VITE_SUPABASE_REDIRECT_URL="http://localhost:4173/auth/callback"
 OCR_SPACE_API_KEY="YOUR_OCR_SPACE_API_KEY"
+APP_ORIGIN="https://YOUR_APP_DOMAIN"
