--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,16 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Performance baseline
+        run: npm run perf:baseline
+
+      - name: Upload perf baseline artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: perf-baseline
+          path: dist/perf-baseline.json
+
   smoke:
     runs-on: ubuntu-latest
     needs: quality
