--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
+    "perf:baseline": "node ./scripts/perf-baseline.mjs",
     "preview": "vite preview",
     "smoke:prod": "bash ./scripts/smoke-tests.sh",
     "test": "vitest run",
